--- a/app/stylesheets/tailwind.css
+++ b/app/stylesheets/tailwind.css
@@ -2,11 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
 /* You can add your own utilites here, for example: */
 @layer utilities {
   .inner-shadow {
-    box-shadow: inset 0 5px 5px -5px theme('borderColor.border-color');
+    box-shadow: inset 0 5px 5px -5px theme("borderColor.border-color");
   }
 
   .thinking-bubble {
@@ -18,7 +17,7 @@
   }
 
   a {
-    color: theme('colors.black');
+    color: theme("colors.black");
     text-decoration: underline;
   }
 
@@ -42,8 +41,8 @@
 
   pre {
     background-color: white;
-    padding: theme('padding.1') theme('padding.2');
-    border-radius: theme('borderRadius.lg');
+    padding: theme("padding.1") theme("padding.2");
+    border-radius: theme("borderRadius.lg");
     font-family: monospace;
     font-size: 1rem;
   }
@@ -57,8 +56,8 @@
   code {
     font-size: 1rem;
     background-color: white;
-    padding: theme('padding.1') theme('padding.2');
-    border-radius: theme('borderRadius.lg');
+    padding: theme("padding.1") theme("padding.2");
+    border-radius: theme("borderRadius.lg");
     font-family: monospace;
   }
 }
